# sss

./: .gitignore  Cargo.toml  Makefile.toml  README.md  cliff.toml  default.nix  flake.nix  hook.sh  index.html  oranda-workspace.json  release.toml  rust-toolchain.toml
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: aur.yml  build.yml  cachix.yml  ci.yml  nix-check.yml  release.yml  web.yml
assets/: sync_from_bat.sh
crates/launcher/: Cargo.toml
crates/launcher/src/: app.rs  config.rs  main.rs
crates/launcher/wix/: main.wxs
crates/sss_capture/: Cargo.toml  README.md
crates/sss_capture/examples/: capture_all.rs  capture_at_cursor.rs  capture_primary.rs  capture_region.rs  capture_window.rs  list_monitors.rs  list_windows.rs  select_backend.rs
crates/sss_capture/src/: backend.rs  capturer.rs  error.rs  frame.rs  geometry.rs  lib.rs  monitor.rs  options.rs  window.rs
crates/sss_capture/src/backend/: compose.rs  macos.rs  windows.rs
crates/sss_capture/src/backend/linux/: ext_image_copy.rs  mod.rs  portal.rs  wayland.rs  x11.rs
crates/sss_capture_ui/: Cargo.toml  README.md
crates/sss_capture_ui/examples/: annotate.rs  monitor_picker.rs  select_region.rs
crates/sss_capture_ui/src/: assets.rs  canvas.rs  color.rs  config.rs  cursor.rs  font.rs  geometry.rs  hit.rs  icons.rs  lib.rs  mode.rs  selector.rs  shape.rs  tool.rs  trigger.rs
crates/sss_capture_ui/src/platform/: cursor.rs  driver.rs  font.rs  icons.rs  mod.rs  wayland_layer.rs
crates/sss_capture_ui/src/render/: composite.rs  gpu.rs  mod.rs  overlay.rs  ui.rs
crates/sss_cli/: Cargo.toml  README.md  default.nix  module.nix
crates/sss_cli/src/: config.rs  error.rs  img.rs  interactive.rs  main.rs  persist.rs  shot.rs
crates/sss_cli/wix/: main.wxs
crates/sss_code/: Cargo.toml  README.md  default.nix  module.nix
crates/sss_code/src/: config.rs  error.rs  font.rs  img.rs  lib.rs  main.rs  theme.rs  utils.rs
crates/sss_code/src/theme/: color.rs  parser.rs  vim.rs
crates/sss_code/wix/: main.wxs
crates/sss_core/: Cargo.toml
crates/sss_core/src/: blur.rs  color.rs  lib.rs  ocr.rs
crates/sss_lib/: Cargo.toml
crates/sss_lib/src/: args.rs  blur.rs  clipboard.rs  color.rs  config_loader.rs  error.rs  font.rs  img.rs  lib.rs  out.rs  shadow.rs  utils.rs
crates/sss_lib/src/components/: mod.rs  round.rs  window_controls.rs
crates/sss_ocr/: Cargo.toml
crates/sss_ocr/src/: engine.rs  error.rs  gpu.rs  hardware.rs  lib.rs  prewarm.rs  registry.rs  types.rs
crates/sss_select/: Cargo.toml
crates/sss_select/src/: app.rs  lib.rs  utils.rs
docs/: config.md
docs-site/: config.toml
docs-site/content/: _index.md  changelog.md
docs-site/content/docs/: _index.md  config-reference.md
docs-site/content/docs/capture-ui/: _index.md  api.md  examples.md  getting-started.md  integration.md
docs-site/content/docs/cli/: _index.md  configuration.md  examples.md  flags.md  getting-started.md
docs-site/content/docs/code/: _index.md  examples.md  flags.md  getting-started.md  themes.md
docs-site/content/install/: _index.md
docs-site/data/: packages.toml  releases.json
docs-site/sass/: _reset.scss  _tokens.scss  _typography.scss  main.scss
docs-site/sass/components/: _badge.scss  _button.scss  _callout.scss  _card.scss  _code-block.scss  _command.scss  _crate-header.scss  _docs-sidebar.scss  _docs-toc.scss  _footer.scss  _hero.scss  _install-block.scss  _nav.scss
docs-site/sass/pages/: _changelog.scss  _docs.scss  _home.scss  _install.scss
docs-site/static/fonts/: .gitkeep
docs-site/static/img/: .gitkeep  selector_ui_preview.webm
docs-site/static/js/: copy-cmd.js  docs-toc.js  install-tabs.js  mobile-nav.js  os-detect.js  theme-toggle.js
docs-site/templates/: base.html  changelog.html  index.html  install.html  page.html  section.html
docs-site/templates/macros/: docs.html  install.html  nav.html  ui.html
docs-site/templates/shortcodes/: callout.html  command.html  figure.html
examples/: default_config.toml
nix/: captureUiConfig.nix  cliConfig.nix  codeConfig.nix  default.nix  gen-docs.nix  hm-module.nix  nixos-module.nix  ocrConfig.nix  overlay.nix  release.nix  sharedConfig.nix  site.nix
scripts/: fetch-releases.sh  install.sh
src/: cli.rs  main.rs  theme.rs
sss/: artifacts.json  changelog.rss  index.html  sss_cli-installer.ps1.txt  sss_code-installer.sh.txt
sss/artifacts/: index.html
sss/changelog/: index.html
sss/changelog/sss_cli/v0.1.1/: index.html
sss/changelog/sss_cli/v0.1.2/: index.html
sss/changelog/sss_cli/v0.1.4/: index.html
sss/changelog/sss_cli/v0.1.5/: index.html
sss/changelog/sss_code/v0.1.5/: index.html
sss/changelog/sss_code/v0.1.6/: index.html
sss/changelog/sss_code/v0.1.8/: index.html
sss/changelog/sss_code/v0.1.9/: index.html
sss/changelog/sss_code/v0.2.0/: index.html
sss/changelog/v0.1.4/: index.html
sss_code/: artifacts.json  changelog.rss  index.html  sss_cli-installer.sh.txt  sss_code-installer.ps1.txt
sss_code/artifacts/: index.html
sss_code/changelog/: index.html
sss_code/changelog/sss_cli/v0.1.1/: index.html
sss_code/changelog/sss_cli/v0.1.2/: index.html
sss_code/changelog/sss_cli/v0.1.4/: index.html
sss_code/changelog/sss_cli/v0.1.5/: index.html
sss_code/changelog/sss_code/v0.1.5/: index.html
sss_code/changelog/sss_code/v0.1.6/: index.html
sss_code/changelog/sss_code/v0.1.8/: index.html
sss_code/changelog/sss_code/v0.1.9/: index.html
sss_code/changelog/sss_code/v0.2.0/: index.html
sss_code/changelog/v0.1.4/: index.html
