[workspace.package]
name = "Super ScreenShot"
version = "0.0.2"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["SergioRibera"]
repository = "https://github.com/SergioRibera/sss"
homepage = "https://github.com/SergioRibera/sss"

[workspace]
resolver = "2"
members = ["crates/sss_lib", "crates/sss_cli", "crates/sss_code"]

[profile.dev]
opt-level = 1
incremental = true

[profile.release]
strip = true
lto = "thin"
panic = 'abort'
opt-level = 3
codegen-units = 1

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[workspace.dependencies]
thiserror = "1"
serde = { version = "1.0.210", features = ["serde_derive"] }
toml = "0.8.8"
merge2 = "0.3.0"
directories = "5.0.1"
clap = { version = "4.5.19", features = [
    "derive",
    "color",
    "env",
    "suggestions",
    "wrap_help",
] }

tracing = "0.1.40"
color-eyre = { version = "0.6.3", features = ["issue-url"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[patch.crates-io]
mouse_position = { git = "https://github.com/SergioRibera/mouse_position", branch = "compositors_protocols" }

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.7.2"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = ["shell", "powershell", "homebrew", "msi"]
# A GitHub repo to push Homebrew formulas to
tap = "SergioRibera/homebrew-tap"
# Target platforms to build apps for (Rust target-triple syntax)
targets = [
    "x86_64-unknown-linux-gnu",
    "aarch64-apple-darwin",
    "x86_64-apple-darwin",
    "x86_64-pc-windows-msvc",
]
# Publish jobs to run in CI
publish-jobs = ["homebrew"]
# Publish jobs to run in CI
pr-run-mode = "skip"

[workspace.metadata.dist.github-custom-runners]
aarch64-unknown-linux-gnu = "buildjet-8vcpu-ubuntu-2204-arm"
aarch64-unknown-linux-musl = "buildjet-8vcpu-ubuntu-2204-arm"

[workspace.metadata.dist.dependencies.apt]
libfontconfig1 = "*"
libfreetype6 = "*"
libxcb1 = "*"
libxrandr2 = "*"
libdbus-1-3 = "*"
