[workspace.package]
version = "0.0.2"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["SergioRibera"]
repository = "https://github.com/SergioRibera/sss"
homepage = "https://github.com/SergioRibera/sss"

# Crane (Nix builder) reads `workspace.metadata.crane.name` to derive the
# umbrella derivation name when the workspace has no root package. Cargo's
# stricter schema deprecated `[workspace.package].name` so the field had
# to move here.
[workspace.metadata.crane]
name = "Super ScreenShot"

[workspace]
resolver = "2"
members = [
    "crates/sss_core",
    "crates/sss_lib",
    "crates/sss_cli",
    "crates/sss_code",
    "crates/sss_capture",
    "crates/sss_capture_ui",
    "crates/sss_ocr",
]

[profile.dev]
opt-level = 1
incremental = true

[profile.release]
strip = true
lto = "thin"
panic = 'abort'
opt-level = 3
codegen-units = 1

# Local forks. `egui-winit` (and friends) declare a crates.io dependency on
# `winit = "0.31.0-beta.2"` which is not actually published; redirect it
# (and the egui stack) to the git forks so cargo resolves a single copy that
# matches the direct git deps in `sss_capture_ui`.
[patch.crates-io]
winit         = { git = "https://github.com/SergioRibera/winit", branch = "layer_shell" }
winit-wayland = { git = "https://github.com/SergioRibera/winit", branch = "layer_shell" }
egui          = { git = "https://github.com/SergioRibera/egui",  branch = "winit_layer_shell" }
egui-winit    = { git = "https://github.com/SergioRibera/egui",  branch = "winit_layer_shell" }
egui-wgpu     = { git = "https://github.com/SergioRibera/egui",  branch = "winit_layer_shell" }

[workspace.dependencies]
thiserror = "2"
serde = { version = "1", features = ["serde_derive"] }
toml = "1"
merge2 = "0.3.2"
directories = "6"
clap = { version = "4.6", features = [
    "derive",
    "color",
    "env",
    "suggestions",
    "wrap_help",
] }

tracing = "0.1.44"
color-eyre = { version = "0.6.5", features = ["issue-url"] }
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
