[package]
name = "sss_capture_ui"
description = "Interactive selection / annotation overlay for sss_capture (slurp-class binary + full editor library)"
version = "0.1.0"
authors.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true
license.workspace = true
keywords = ["screenshot", "selection", "annotation", "overlay", "slurp"]

[features]
default = ["serde"]
serde = ["dep:serde"]

[dependencies]
sss_capture = { path = "../sss_capture", version = "0.1.0" }
sss_core = { path = "../sss_core", version = "0.1.0" }
image = "0.25"
thiserror.workspace = true
tracing.workspace = true
serde = { workspace = true, optional = true }
ab_glyph = "0.2"

# Windowing + rendering. GPUI handles X11 / Wayland (xdg-shell + wlr-layer-shell)
# / Cocoa; it owns the GPU device (Blade on Linux, Metal on macOS) and the
# event loop. Pinned to a Zed commit because the published 0.2.2 doesn't yet
# expose `WindowKind::LayerShell` — the API lives on `main` until Zed cuts a
# new release.
#
# Windows is intentionally unsupported: GPUI itself targets only macOS and
# Linux.
[target.'cfg(any(target_os = "linux", target_os = "macos"))'.dependencies]
gpui = { git = "https://github.com/zed-industries/zed", rev = "9abb73ee326118a7bf8afcd524acbb660e97bd50", default-features = false, features = ["wayland", "x11"] }
gpui_platform = { git = "https://github.com/zed-industries/zed", rev = "9abb73ee326118a7bf8afcd524acbb660e97bd50", default-features = false, features = ["wayland", "x11"] }

[[example]]
name = "select_region"
path = "examples/select_region.rs"

[[example]]
name = "annotate"
path = "examples/annotate.rs"

[[example]]
name = "monitor_picker"
path = "examples/monitor_picker.rs"

[[bin]]
name = "sss-select"
path = "src/bin/sss_select.rs"
