[package]
name = "sss_capture_ui"
description = "Interactive selection / annotation overlay for sss_capture (slurp-class binary + full editor library)"
version = "0.2.1"
authors.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true
license.workspace = true
keywords = ["screenshot", "selection", "annotation", "overlay", "slurp"]

# Library crate — bumps version + commit via cargo-release, but never tags.
# Only sss_cli + sss_code emit tags (those drive the Release workflow).
[package.metadata.release]
tag = false

[features]
default = ["editor", "serde"]
editor = ["dep:egui", "dep:egui-winit", "dep:egui-wgpu", "dep:wgpu", "dep:pollster"]
# `editor` activates the optional cross-platform deps (egui/wgpu/pollster)
# plus the per-target egui-winit + egui-wgpu, so the same feature works
# whether the crate is built on Linux, Windows or macOS.
serde = ["dep:serde"]

[dependencies]
sss_capture = { path = "../sss_capture", version = "0.2.1" }
sss_core = { path = "../sss_core", version = "0.2.1" }
image = "0.25"
thiserror.workspace = true
tracing.workspace = true
serde = { workspace = true, optional = true }
ab_glyph = "0.2"

# SVG icon loader for the editor toolbar. resvg + tiny-skia raster the
# user-supplied SVGs on the CPU; results are cached. Cross-platform — every
# host with the editor feature uses these icons.
resvg = { version = "0.47", default-features = false }
usvg = { version = "0.47", default-features = false }
tiny-skia = "0.12"

# Editor stack — kept cross-platform because the `editor` feature is part
# of the default set and the module tree (`render/`, `icons.rs`, …)
# references these crates unconditionally. Per-target egui-winit /
# egui-wgpu feature lists below only flip the windowing backend the egui
# fork compiles in; the crates themselves resolve everywhere.
egui       = { git = "https://github.com/SergioRibera/egui", branch = "winit_layer_shell", optional = true, default-features = false, features = ["bytemuck", "default_fonts"] }
wgpu       = { version = "25", optional = true }
pollster   = { version = "0.4", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
# Windowing — winit fork with native wlr-layer-shell support.
winit = { git = "https://github.com/SergioRibera/winit", branch = "layer_shell", default-features = false, features = [
    "x11",
    "wayland",
] }
# Override `winit-wayland` defaults to disable `dlopen` — we link directly
# against libwayland-client.so.0 via DT_NEEDED. dlopen mode breaks in nix
# shells / other setups where the SONAME isn't on LD_LIBRARY_PATH.
winit-wayland = { git = "https://github.com/SergioRibera/winit", branch = "layer_shell", default-features = false, features = ["csd-adwaita"] }

egui-winit = { git = "https://github.com/SergioRibera/egui", branch = "winit_layer_shell", optional = true, default-features = false, features = ["clipboard", "wayland", "x11"] }
egui-wgpu  = { git = "https://github.com/SergioRibera/egui", branch = "winit_layer_shell", optional = true, default-features = false, features = ["wayland", "x11"] }

[target.'cfg(target_os = "windows")'.dependencies]
winit = { git = "https://github.com/SergioRibera/winit", branch = "layer_shell" }
egui-winit = { git = "https://github.com/SergioRibera/egui", branch = "winit_layer_shell", optional = true, default-features = false, features = ["clipboard"] }
egui-wgpu  = { git = "https://github.com/SergioRibera/egui", branch = "winit_layer_shell", optional = true, default-features = false }

[target.'cfg(target_os = "macos")'.dependencies]
winit = { git = "https://github.com/SergioRibera/winit", branch = "layer_shell" }
egui-winit = { git = "https://github.com/SergioRibera/egui", branch = "winit_layer_shell", optional = true, default-features = false, features = ["clipboard"] }
egui-wgpu  = { git = "https://github.com/SergioRibera/egui", branch = "winit_layer_shell", optional = true, default-features = false }

[[example]]
name = "select_region"
path = "examples/select_region.rs"

[[example]]
name = "annotate"
path = "examples/annotate.rs"
required-features = ["editor"]

[[example]]
name = "monitor_picker"
path = "examples/monitor_picker.rs"

[[bin]]
name = "sss-select"
path = "src/bin/sss_select.rs"
