[package]
name = "sss_cli"
description = "Take pretty screenshots of your screen"
version = "0.1.5"
publish = false
default-run = "sss"
authors.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "sss"
path = "./src/main.rs"

[package.metadata.dist]
dist = true

[package.metadata.wix]
upgrade-guid = "CF05D879-DF84-4B30-BAEF-1B68E1DAD701"
path-guid = "50D7445F-C399-4C23-A8FF-6BE599929DE9"
license = false
eula = false

[dependencies]
clap.workspace = true
toml.workspace = true
serde.workspace = true
merge2.workspace = true
thiserror.workspace = true
directories.workspace = true
tracing.workspace = true
color-eyre.workspace = true
tracing-subscriber.workspace = true
mouse_position = "0.1.3"
xcap = "0.0.13"
sss_lib = { path = "../sss_lib" }

[target.x86_64-unknown-linux-gnu.dependencies]
libwayshot = "0.3.0"
