[package]
name = "sss_cli"
description = "Take pretty screenshots of your screen"
version = "0.1.5"
publish = false
default-run = "sss"
authors.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "sss"
path = "./src/main.rs"

[features]
default = []
# Forward to `sss_ocr` to compile in the matching ORT execution provider.
# The user still has to point ORT at a libonnxruntime built with that EP
# (`ORT_LIB_LOCATION` on Nix; system package on others).
cuda = ["sss_ocr/cuda"]
tensorrt = ["sss_ocr/tensorrt"]
coreml = ["sss_ocr/coreml"]
directml = ["sss_ocr/directml"]
openvino = ["sss_ocr/openvino"]
webgpu = ["sss_ocr/webgpu"]

[package.metadata.dist]
dist = true

[package.metadata.wix]
upgrade-guid = "CF05D879-DF84-4B30-BAEF-1B68E1DAD701"
path-guid = "50D7445F-C399-4C23-A8FF-6BE599929DE9"
license = false
eula = false

[dependencies]
clap.workspace = true
toml.workspace = true
serde.workspace = true
merge2.workspace = true
thiserror.workspace = true
directories.workspace = true
tracing.workspace = true
color-eyre.workspace = true
tracing-subscriber.workspace = true
mouse_position = { git = "https://github.com/SergioRibera/mouse_position", branch = "compositors_protocols" }
sss_lib = { path = "../sss_lib" }
sss_capture = { path = "../sss_capture" }
sss_capture_ui = { path = "../sss_capture_ui" }
sss_ocr = { path = "../sss_ocr" }
