[package]
name = "sss_cli"
description = "Take pretty screenshots of your screen"
version = "0.2.1"
publish = false
default-run = "sss"
authors.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "sss"
path = "./src/main.rs"

[features]
default = ["ocr"]
# Compile in the OCR pipeline (sss_ocr + onnxruntime dlopen path). Turning
# this off drops every OCR config field, CLI flag and runtime worker —
# binary stays a pure screenshot tool, no libonnxruntime needed at runtime.
ocr = ["dep:sss_ocr"]
# Execution-provider features only make sense alongside `ocr`; they imply
# it so a stray `--features cuda` still produces a working binary.
cuda = ["ocr", "sss_ocr/cuda"]
tensorrt = ["ocr", "sss_ocr/tensorrt"]
coreml = ["ocr", "sss_ocr/coreml"]
directml = ["ocr", "sss_ocr/directml"]
openvino = ["ocr", "sss_ocr/openvino"]
webgpu = ["ocr", "sss_ocr/webgpu"]

[dependencies]
clap.workspace = true
toml.workspace = true
serde.workspace = true
merge2.workspace = true
thiserror.workspace = true
directories.workspace = true
tracing.workspace = true
color-eyre.workspace = true
tracing-subscriber.workspace = true
mouse_position = { git = "https://github.com/SergioRibera/mouse_position", branch = "compositors_protocols" }
sss_lib = { path = "../sss_lib" }
sss_capture = { path = "../sss_capture" }
sss_capture_ui = { path = "../sss_capture_ui" }
sss_ocr = { path = "../sss_ocr", optional = true }
