[package]
name = "sss_code"
description = "Take pretty screenshot to your code"
version = "0.1.6"
publish = false
authors.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "sss_code"
path = "./src/main.rs"

[package.metadata.dist]
dist = true

[package.metadata.wix]
upgrade-guid = "5E40820B-529A-430A-974D-3573F1BBD7B5"
path-guid = "F31CE5AA-8FD7-43C4-9E5C-306E8E323AA8"
license = false
eula = false

[dependencies]
log.workspace = true
toml.workspace = true
clap.workspace = true
serde.workspace = true
merge2.workspace = true
thiserror.workspace = true
env_logger.workspace = true
directories.workspace = true
clap-stdin = "0.4.0"
sss_lib = { path = "../sss_lib" }
syntect = { version = "5.1.0", default-features = false, features = [
    "parsing",
    "default-syntaxes",
    "default-themes",
    "regex-onig",
    "dump-load",
    "plist-load",
    "yaml-load",
] }
