[package]
name = "sss_code"
description = "Take pretty screenshots of your code"
version = "0.3.0"
publish = false
authors.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "sss_code"
path = "./src/main.rs"

[dependencies]
toml.workspace = true
clap.workspace = true
serde.workspace = true
merge2.workspace = true
thiserror.workspace = true
directories.workspace = true
tracing.workspace = true
color-eyre.workspace = true
tracing-subscriber.workspace = true
clap-stdin = "0.8.1"
sss_lib = { path = "../sss_lib" }
syntect = { version = "5.3.0", default-features = false, features = [
    "parsing",
    "default-syntaxes",
    "default-themes",
    "regex-onig",
    "dump-load",
    "plist-load",
    "yaml-load",
] }
