[package]
name = "sss_core"
description = "Shared primitives (color, blur) used by sss_lib and sss_capture_ui"
version = "0.2.0"
authors.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true
license.workspace = true

# Library crate — bumps version + commit via cargo-release, but never tags.
# Only sss_cli + sss_code emit tags (those drive the Release workflow).
[package.metadata.release]
tag = false

[features]
default = []
serde = ["dep:serde"]

[dependencies]
image = { version = "0.25", default-features = false, features = ["rayon"] }
rayon = "1.12"
thiserror.workspace = true
tracing.workspace = true
serde = { workspace = true, optional = true }
