[package]
name = "sss_lib"
version = "0.1.4"
publish = false
dist = false
repository.workspace = true
homepage.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
clap.workspace = true
serde.workspace = true
merge2.workspace = true
tracing.workspace = true
thiserror.workspace = true
font-kit = "0.14"
pathfinder_geometry = "0.5"
imageproc = "0.25"
arboard = { version = "3.4", features = ["wayland-data-control"] }
image = { version = "0.25", default-features = false, features = [
    "png",
    "jpeg",
    "rayon",
    "webp",
] }
rayon = "1.8"
notify-rust = { version = "4.11", features = ["images"] }
