[package]
name = "sss_lib"
version = "0.1.4"
publish = false
dist = false
repository.workspace = true
homepage.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
clap.workspace = true
serde.workspace = true
merge2.workspace = true
tracing.workspace = true
thiserror.workspace = true
font-kit = "0.14"
pathfinder_geometry = "0.5"
imageproc = "0.25"
arboard = { version = "3.4", features = ["wayland-data-control"] }
image = { version = "0.25", default-features = false, features = [
    "png",
    "jpeg",
    "rayon",
    "webp",
] }
rayon = "1.8"
notify-rust = { version = "4.11", features = ["images"] }

# Native Wayland clipboard path so we don't leave arboard's fork-daemon
# behind whenever the user passes `--copy`. The wlroots
# `zwlr_data_control_manager_v1` protocol lets a clipboard manager
# (DankMaterialShell / cliphist / clipman / …) grab the offered data
# instantly; we then watch for our source being cancelled and exit
# cleanly. When no manager is present we fall back to arboard.
[target.'cfg(target_os = "linux")'.dependencies]
wayland-client = "0.31"
wayland-protocols-wlr = { version = "0.2", features = ["client"] }
rustix = { version = "0.38", features = ["event"] }
