[package]
name = "sss_ocr"
description = "OCR engine for sss — wraps oar-ocr with tiered models, hardware-aware defaults and a non-blocking download worker"
version = "0.1.0"
authors.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
# Execution-provider feature flags forward to oar-ocr. Each one compiles in
# the matching ORT EP bindings; the underlying `libonnxruntime.so` (or
# system library when `ORT_PREFER_DYNAMIC_LINK=1`) still has to be built
# with that EP available. Without the feature, asking for that EP at
# runtime falls back to CPU.
cuda = ["oar-ocr/cuda"]
tensorrt = ["oar-ocr/tensorrt"]
coreml = ["oar-ocr/coreml"]
directml = ["oar-ocr/directml"]
openvino = ["oar-ocr/openvino"]
webgpu = ["oar-ocr/webgpu"]

[dependencies]
sss_core = { path = "../sss_core", features = ["serde"] }
oar-ocr = { version = "0.7", default-features = false, features = ["simd", "auto-download"] }
image = { version = "0.25", default-features = false, features = ["rayon"] }
sysinfo = { version = "0.32", default-features = false, features = ["system"] }
num_cpus = "1.16"
directories.workspace = true
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true
tracing.workspace = true
